Dope sheet (Mask mode): Adjusting keyframes doesn't tag for update #74292

Closed
opened 2020-02-28 15:06:13 +01:00 by Christoph Werner · 8 comments

System Information
version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: 77d23b0bd7, type: Release
build date: 2020-02-13, 01:56:46
platform: Windows

Short description of error
Dope sheet mask mode:
After copying an animated mask keyframe, the result will not be updated when playing the animation.
Only a scene reload shows the changes.

Exact steps for others to reproduce the error
See the attached .blend file.
The following mentioned keyframes are marked in the attached scene for better reproduction.

  1. Open the file
  2. Play the animation to see the start situation and compare it later.
  3. Move keyframe "MPoint2" to Frame 30.
  4. Play the animation.
  • The moved keyframe has no effect.

  • You have to save and reload the whole scene

blender_maskbug282_01.blend

animatedmask_bug01.gif

**System Information** version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: 77d23b0bd76f, type: Release build date: 2020-02-13, 01:56:46 platform: Windows **Short description of error** Dope sheet mask mode: After copying an animated mask keyframe, the result will not be updated when playing the animation. Only a scene reload shows the changes. **Exact steps for others to reproduce the error** See the attached .blend file. The following mentioned keyframes are marked in the attached scene for better reproduction. 1. Open the file 2. Play the animation to see the start situation and compare it later. 3. Move keyframe "MPoint2" to Frame 30. 4. Play the animation. - > The moved keyframe has no effect. - > You have to save and reload the whole scene [blender_maskbug282_01.blend](https://archive.blender.org/developer/F8378114/blender_maskbug282_01.blend) ![animatedmask_bug01.gif](https://archive.blender.org/developer/F8378112/animatedmask_bug01.gif)

Added subscriber: @ChristophWerner

Added subscriber: @ChristophWerner
Ankit Meel changed title from URGENT: Dope sheet (Mask mode): Copied keyframes won't be updated to Dope sheet (Mask mode): Copied keyframes won't be updated 2020-02-28 21:31:38 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Sybren A. Stüvel self-assigned this 2020-03-02 12:05:38 +01:00
Sybren A. Stüvel changed title from Dope sheet (Mask mode): Copied keyframes won't be updated to Dope sheet (Mask mode): Adjusting keyframes doesn't tag for update 2020-03-02 14:31:42 +01:00

This issue was referenced by 8447f45f09

This issue was referenced by 8447f45f09761c5f75b1ac76b7ad99c901680052

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Is this fix already in Blender 2.82a ?

I've downloaded the following version today and the bug is still there. This is a reason to not to use version 2.82a for me. Really sad. I'm a bit disappointed.

Checked version:
version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: 375c7dc4ca, type: Release
build date: 2020-03-12, 15:41:08
platform: Windows

Is this fix already in Blender 2.82a ? I've downloaded the following version today and the bug is still there. This is a reason to not to use version 2.82a for me. Really sad. I'm a bit disappointed. Checked version: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: 375c7dc4caf4, type: Release build date: 2020-03-12, 15:41:08 platform: Windows
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Is this fix already in Blender 2.82a?

No, gotta use 2.83 from https://builder.blender.org/download/

> Is this fix already in Blender 2.82a? No, gotta use 2.83 from https://builder.blender.org/download/

Bug fix confirmed in:

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.59

Blender Version
Version: 2.83 (sub 9), branch: master, commit date: 2020-03-17 20:42, hash: dc2df8307f

Thank you!

Bug fix confirmed in: **System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.59 **Blender Version** Version: 2.83 (sub 9), branch: master, commit date: 2020-03-17 20:42, hash: `dc2df8307f` Thank you!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74292
No description provided.