Fix T74292: Dope sheet (Mask mode) keyframe editing misses update